--- a/.github/workflows/owaspzap.yml
+++ b/.github/workflows/owaspzap.yml
@@ -1,18 +1,21 @@
 name: OWASP ZAP Scan
 
-on:
-  push:
-    branches:
-      - main
+on: [push]
 
 jobs:
   zap_scan:
     runs-on: ubuntu-latest
+    name: Scan the webapplication
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Run OWASP ZAP
-        uses: zaproxy/action-full-scan@v0.4.0
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
-          target: 'http://localhost:8080'
+          ref: master
+      - name: ZAP Scan
+        uses: zaproxy/action-full-scan@v0.11.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
+          target: 'https://www.zaproxy.org/'
+          rules_file_name: '.zap/rules.tsv'
+          cmd_options: '-a'
