--- a/.github/workflows/owaspzap.yml
+++ b/.github/workflows/owaspzap.yml
@@ -1,21 +1,23 @@
 name: OWASP ZAP Scan
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   zap_scan:
     runs-on: ubuntu-latest
-    name: Scan the webapplication
+    name: Scan the web application
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          ref: master
-      - name: ZAP Scan
+
+      - name: Run OWASP ZAP Full Scan
         uses: zaproxy/action-full-scan@v0.11.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'https://www.zaproxy.org/'
-          rules_file_name: '.zap/rules.tsv'
+          target: 'http://localhost:8080' # Update this with your target
           cmd_options: '-a'
+          rules_file_name: '.zap/rules.tsv'
