--- a/.github/workflows/owaspzap.yml
+++ b/.github/workflows/owaspzap.yml
@@ -13,11 +13,25 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # Start your application here (using Docker example)
+      - name: Start the application
+        run: |
+          docker-compose up -d
+
+      # Wait for the application to be up and running
+      - name: Wait for the application to be ready
+        run: |
+          until curl -s http://localhost:8080; do
+            echo "Waiting for application..."
+            sleep 10
+          done
+
+      # Run OWASP ZAP Full Scan
       - name: Run OWASP ZAP Full Scan
         uses: zaproxy/action-full-scan@v0.11.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'http://localhost:3000' # Update this with your target
+          target: 'http://localhost:8080'
           cmd_options: '-a'
           rules_file_name: '.zap/rules.tsv'
