--- a/.github/workflows/owaspzap.yml
+++ b/.github/workflows/owaspzap.yml
@@ -6,36 +6,32 @@ on:
       - main
 
 jobs:
-  zap_scan:
+  build:
     runs-on: ubuntu-latest
-    name: Scan the web application
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Build and run the application using Dockerfile
-      - name: Build the Docker image
-        run: |
-          docker build -t my-app .
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
 
-      - name: Run the application container
-        run: |
-          docker run -d -p 8080:8080 my-app
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
 
-      # Wait for the application to be ready
-      - name: Wait for the application to be ready
-        run: |
-          until curl -s http://localhost:8080; do
-            echo "Waiting for application..."
-            sleep 10
-          done
+      - name: Build with Maven
+        run: mvn clean install
 
-      # Run OWASP ZAP Full Scan
-      - name: Run OWASP ZAP Full Scan
+      - name: Run OWASP ZAP
         uses: zaproxy/action-full-scan@v0.11.0
         with:
+          target: 'http://localhost:8080'
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'http://localhost:8080'
-          cmd_options: '-a'
-          rules_file_name: '.zap/rules.tsv'
