--- a/.github/workflows/owaspzap.yml
+++ b/.github/workflows/owaspzap.yml
@@ -6,8 +6,9 @@ on:
       - main
 
 jobs:
-  build:
+  zap_scan:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -15,23 +16,30 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: '17'
-          distribution: 'adopt'
 
-      - name: Cache Maven packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+      - name: Build project with Maven
+        run: mvn clean package -DskipTests
 
-      - name: Build with Maven
-        run: mvn clean install
+      - name: Build Docker image for Spring Boot app
+        run: docker build -t hackapp .
+
+      - name: Run the app in Docker
+        run: docker run -d -p 8080:8080 hackapp
+
+      - name: Wait for the app to start
+        run: |
+          until curl -s http://localhost:8080; do
+            echo "Waiting for the app to be available..."
+            sleep 10
+          done
 
       - name: Run OWASP ZAP
         uses: zaproxy/action-full-scan@v0.11.0
         with:
-          target: 'http://localhost:8080'
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
+          target: 'http://localhost:8080'
+          rules_file_name: '.zap/rules.tsv'
+          cmd_options: '-a'
