--- a/.github/workflows/owaspzap.yml
+++ b/.github/workflows/owaspzap.yml
@@ -8,38 +8,30 @@ on:
 jobs:
   zap_scan:
     runs-on: ubuntu-latest
+    services:
+      app:
+        image: hackapp
+        ports:
+          - 8080:8080
+        options: > 
+          --network zap-network
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      - name: Build project with Maven
-        run: mvn clean package -DskipTests
-
-      - name: Build Docker image for Spring Boot app
-        run: docker build -t hackapp .
-
-      - name: Run the app in Docker
-        run: docker run -d -p 8080:8080 hackapp
-
-      - name: Wait for the app to start
+      - name: Build and run app in Docker
         run: |
-          until curl -s http://localhost:8080; do
-            echo "Waiting for the app to be available..."
-            sleep 10
-          done
+          docker build -t hackapp .
+          docker run -d --network zap-network -p 8080:8080 hackapp
 
       - name: Run OWASP ZAP
         uses: zaproxy/action-full-scan@v0.11.0
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'http://localhost:8080'
+          target: 'http://app:8080'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
