--- a/.github/workflows/owaspzap.yml
+++ b/.github/workflows/owaspzap.yml
@@ -8,14 +8,6 @@ on:
 jobs:
   zap_scan:
     runs-on: ubuntu-latest
-    services:
-      app:
-        image: hackapp
-        ports:
-          - 8080:8080
-        options: > 
-          --network zap-network
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -23,15 +15,25 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Build and run app in Docker
+      - name: Build Docker image
         run: |
-          docker build -t hackapp .
-          docker run -d --network zap-network -p 8080:8080 hackapp
+          docker build -t hackapp:latest .
 
-      - name: Run OWASP ZAP
+      - name: Run Docker container
+        run: |
+          docker run -d -p 8080:8080 hackapp:latest
+
+      - name: Wait for the app to start
+        run: |
+          sleep 30  # Add delay to give the app time to fully start
+
+      - name: Run OWASP ZAP scan
         uses: zaproxy/action-full-scan@v0.11.0
         with:
-          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'http://app:8080'
-          rules_file_name: '.zap/rules.tsv'
+          target: 'http://localhost:8080'
           cmd_options: '-a'
+        
+      - name: Stop and clean up Docker container
+        run: |
+          docker stop $(docker ps -q --filter ancestor=hackapp:latest)
+          docker rm $(docker ps -a -q --filter ancestor=hackapp:latest)
