--- a/.github/workflows/owaspzap.yml
+++ b/.github/workflows/owaspzap.yml
@@ -6,34 +6,30 @@ on:
       - main
 
 jobs:
-  zap_scan:
+  build_and_zap:
     runs-on: ubuntu-latest
+    services:
+      app:
+        image: hackapp:latest
+        ports:
+          - 8080:8080
+        options: --health-cmd="curl --fail http://localhost:8080 || exit 1" --health-interval=10s --health-retries=5 --health-timeout=5s
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Build Docker Image
+        run: docker build -t hackapp .
 
-      - name: Build Docker image
+      - name: Wait for Application to be Ready
         run: |
-          docker build -t hackapp:latest .
+          while ! curl -s http://localhost:8080; do
+            echo "Waiting for app to be ready..."
+            sleep 10
+          done
 
-      - name: Run Docker container
-        run: |
-          docker run -d -p 8080:8080 hackapp:latest
-
-      - name: Wait for the app to start
-        run: |
-          sleep 30  # Add delay to give the app time to fully start
-
-      - name: Run OWASP ZAP scan
+      - name: ZAP Full Scan
         uses: zaproxy/action-full-scan@v0.11.0
         with:
           target: 'http://localhost:8080'
           cmd_options: '-a'
-        
-      - name: Stop and clean up Docker container
-        run: |
-          docker stop $(docker ps -q --filter ancestor=hackapp:latest)
-          docker rm $(docker ps -a -q --filter ancestor=hackapp:latest)
