--- a/.github/workflows/owaspzap.yml
+++ b/.github/workflows/owaspzap.yml
@@ -6,30 +6,30 @@ on:
       - main
 
 jobs:
-  build_and_zap:
+  build:
     runs-on: ubuntu-latest
-    services:
-      app:
-        image: hackapp:latest
-        ports:
-          - 8080:8080
-        options: --health-cmd="curl --fail http://localhost:8080 || exit 1" --health-interval=10s --health-retries=5 --health-timeout=5s
+
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Build with Maven
+        run: mvn clean install
 
       - name: Build Docker Image
         run: docker build -t hackapp .
 
-      - name: Wait for Application to be Ready
-        run: |
-          while ! curl -s http://localhost:8080; do
-            echo "Waiting for app to be ready..."
-            sleep 10
-          done
+      - name: Run Docker Container
+        run: docker run -d -p 8080:8080 hackapp
 
-      - name: ZAP Full Scan
+      - name: OWASP ZAP Scan
         uses: zaproxy/action-full-scan@v0.11.0
         with:
           target: 'http://localhost:8080'
-          cmd_options: '-a'
+          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
