--- a/.github/workflows/owaspzap.yml
+++ b/.github/workflows/owaspzap.yml
@@ -33,3 +33,5 @@ jobs:
         with:
           target: 'http://localhost:8080'
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
+          rules_file_name: '.zap/rules.tsv'
+          cmd_options: '-a'
