--- a/.github/workflows/owaspzap.yml
+++ b/.github/workflows/owaspzap.yml
@@ -31,6 +31,7 @@ jobs:
       - name: OWASP ZAP Scan
         uses: zaproxy/action-full-scan@v0.11.0
         with:
+          token: ${{ secrets.GH_TOKEN }}
           target: 'http://localhost:8080'
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           rules_file_name: '.zap/rules.tsv'
