--- a/.github/workflows/owaspzap.yml
+++ b/.github/workflows/owaspzap.yml
@@ -6,33 +6,33 @@ on:
       - main
 
 jobs:
-  build:
+  zap_scan:
     runs-on: ubuntu-latest
-
+    name: OWASP ZAP Scan
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: Set up Java 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Build with Maven
-        run: mvn clean install
+      - name: Build the application
+        run: |
+          ./mvnw clean install
 
-      - name: Build Docker Image
-        run: docker build -t hackapp .
-
-      - name: Run Docker Container
-        run: docker run -d -p 8080:8080 hackapp
-
-      - name: OWASP ZAP Scan
+      - name: Run OWASP ZAP
         uses: zaproxy/action-full-scan@v0.11.0
         with:
-          token: ${{ secrets.GH_TOKEN }}
           target: 'http://localhost:8080'
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
+          
+      - name: Upload ZAP report artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: ZAP Reports
+          path: report_html.html
