--- a/.github/workflows/owaspzap.yml
+++ b/.github/workflows/owaspzap.yml
@@ -6,14 +6,19 @@ on:
       - main
 
 jobs:
-  zap_scan:
+  build_and_zap_scan:
     runs-on: ubuntu-latest
-    name: OWASP ZAP Scan
+
+    services:
+      docker:
+        image: "docker:19.03.12"
+        options: --privileged
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Java 17
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
@@ -22,6 +27,16 @@ jobs:
       - name: Build the application
         run: |
           ./mvnw clean install
+          docker build -t hackapp .
+
+      - name: Run the app container
+        run: |
+          docker run -d -p 8080:8080 hackapp
+        timeout-minutes: 2
+
+      - name: Wait for the app to be up and running
+        run: |
+          sleep 30
 
       - name: Run OWASP ZAP
         uses: zaproxy/action-full-scan@v0.11.0
@@ -30,7 +45,7 @@ jobs:
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
-          
+
       - name: Upload ZAP report artifacts
         uses: actions/upload-artifact@v4
         with:
