--- a/.github/workflows/owaspzap.yml
+++ b/.github/workflows/owaspzap.yml
@@ -47,7 +47,7 @@ jobs:
           cmd_options: '-a'
 
       - name: Upload ZAP report artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v4  # Updated to v4 to avoid deprecation
         with:
           name: ZAP Reports
           path: report_html.html
